--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Natural20">
-        <activity android:name=".D4"></activity>
+        <activity android:name=".D10"></activity>
+        <activity android:name=".Dice" />
+        <activity android:name=".D8" />
+        <activity
+            android:name=".D6"
+            android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".D4"
+            android:parentActivityName=".MainActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
