--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,14 +9,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Natural20">
-        <activity android:name=".D10"></activity>
-        <activity android:name=".Dice" />
-        <activity android:name=".D8" />
+        <activity android:name=".D20Activity"
+            android:parentActivityName=".MainActivity"/>
+        <activity android:name=".D12Activity" android:parentActivityName=".MainActivity"/>
+        <activity android:name=".D10Activity" android:parentActivityName=".MainActivity" />
+        <activity android:name=".D8Activity" android:parentActivityName=".MainActivity" />
         <activity
-            android:name=".D6"
+            android:name=".D6Activity"
             android:parentActivityName=".MainActivity" />
         <activity
-            android:name=".D4"
+            android:name=".D4Activity"
             android:parentActivityName=".MainActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
